--- a/styles.css
+++ b/styles.css
@@ -1,2 +1,30 @@
-/*  your css code here. If applicable */
-suno papa hai to kab ratt ko ?nahi abhi 10 minutes mekkk kat du call 10 minutes me karu
+#card{
+display:flex;
+flex-direction:column;
+align-items:center;
+background-color:lightgray;
+padding:20px;
+margin:100px;
+border-radius:20px;
+}
+#button{
+	background-color:tomato;
+	padding:15px;
+	border-radius:10px;
+	color:white;
+	font-size:30px;
+}
+#price{
+	font-size:30px;
+	text-decoration:bold;
+	line-height:0.1px;
+}
+#description{
+	font-size:30px;
+	text-decoration:bold;
+	text-align:center;
+}
+#heading{
+	font-size:40px;
+	line-height:0.1px;
+}
